添加了实体不存在的异常，添加了Base64编码和解码的工具方法，并消除了编译警告。